# c-lab-expressions

./: .gitignore  .gitmodules  CMakeLists.txt
include/: expression_tree.h  stack.h
src/: lexer.c  main.c  tree.c
